# legal-sentiment-analysis

./: ARCHITECTURE.md  Dockerfile  README.md  docker-entrypoint.sh  package.json  pnpm-lock.yaml
apps/api/: main.py  package.json  pyproject.toml  requirements.txt
apps/web/: package.json
apps/web/app/: page.tsx
